syntax = "proto3";

package pagination.v1;
option go_package = "github.com/purposeinplay/go-commons/pagination/proto/pagination/v1;paginationv1";


message Arguments {
    optional int64 first = 1;
    optional string after = 2;
    optional int64 last = 3;
    optional string before = 4;
}

message PageInfo {
  optional string start_cursor = 1;
  optional string end_cursor = 2;
  bool has_next_page = 3;
  bool has_previous_page = 4;
}